--- a/GRMs_CFA.ipynb
+++ b/GRMs_CFA.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "# Path to the directory containing all the pattern of three node subgraphs\n",
     "subgraph = \"/Users/anindaastuti/CFA Master/4node"\n",
-    "wkdr = \"/Users/anindaastuti/\"\n",
+    "wkdr = \"/Users/anindaastuti\"\n",
     "print(subgraph)\n",
     "print(wkdr)\n"
    ]
