--- a/GRMs_CFA.ipynb
+++ b/GRMs_CFA.ipynb
@@ -87,8 +87,8 @@
     "#drive.mount('/content/drive')\n",
     "\n",
     "# Path to the directory containing all the pattern of three node subgraphs\n",
-    "subgraph = \"/Users/anindaastuti/CFA Master Code-breast cancer [BRCA]/4node\"\n",
-    "wkdr = \"/Users/anindaastuti/CFA Master Code-breast cancer [BRCA]\"\n",
+    "subgraph = \"/Users/anindaastuti/CFA Master/4node\"\n",
+    "wkdr = \"/Users/anindaastuti/CFA Master\"\n",
     "print(subgraph)\n",
     "print(wkdr)\n"
    ]
